# IEEE_CIS_Fraud_Detection

./: .gitignore  README.md  data_processing.py  data_visualization.py  main.py  neural_networks.py  pyproject.toml  training_evaluation.py
IEEE_CIS_Fraud_Detection/: data_processing.py  data_visualization.py  main.py  neural_networks.py  training_evaluation.py
tests/: test_data_processing.py  test_data_visualization.py  test_neural_networks.py  test_training_evaluation.py
