[tool.poetry]
name = "ieee-cis-fraud-detection"
version = "0.1.0"
description = ""
authors = ["Emily Felker <emilyfelker@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
