[tool.poetry]
name = "ieee-cis-fraud-detection"
version = "0.1.0"
description = ""
authors = ["Emily Felker <emilyfelker@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"
xgboost = "^2.1.3"
tensorflow = "^2.18.0"
keras = "^3.7.0"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
